# gd32vf103-hal

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  asm.S  assemble.ps1  assemble.sh  build.rs  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
examples/: blinky-delay.rs  blinky-mtime.rs  blinky.rs  crc-check.rs  delay-blinky.rs  float.rs  mode-after-lock-constrained.rs  mode-after-lock.rs  red-pill-lights.rs  vf103c-start-blinky.rs  vf103c-start-crc-check.rs  vf103c-start-esig.rs  vf103c-start-serial.rs  vf103c-start-serial.rs.todo
gd32vf103-hal/: Cargo.toml  README.md  asm.S  asm.bat  asm.sh  build.rs
gd32vf103-hal-example/: Cargo.toml  build.rs
gd32vf103-hal-example/examples/: blinky-mtime.rs  blinky.rs  crc-check.rs  delay-blinky.rs  mode-after-lock.rs  red-pill-lights.rs  vf103c-start-backup-data.rs  vf103c-start-backup-tamper.rs  vf103c-start-blinky.rs
gd32vf103-hal-example/src/: main.rs
gd32vf103-hal/src/: backup.rs  delay.rs  esig.rs  gpio.rs  lib.rs
memory/: gd32vf103x4.x  gd32vf103x6.x  gd32vf103x8.x  gd32vf103xb.x  memory-base.x
src/: adc.rs  afio.rs  backup.rs  crc.rs  ctimer.rs  debug.rs  delay.rs  esig.rs  fmc.rs  gpio.rs  lib.rs  rcu.rs  serial.rs  signature.rs  spi.rs  systick.rs  time.rs  timer.rs  unit.rs  wdog.rs
