[package]
name = "gd32vf103-hal"
version = "0.0.5"
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/luojia65/gd32vf103-hal"
description = "Hardware abstract layer (HAL) for RISC-V microcontroller GD32VF103"
documentation = "https://docs.rs/gd32vf103-hal"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
license-file = "./LICENSE-MULAN"
readme = "README.md"
keywords = ["riscv", "gd32v", "hal", "embedded-hal"]
build = "build.rs"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"

[features]
inline-asm = ["riscv/inline-asm"]

[dependencies]
gd32vf103-pac = "0.4"
embedded-hal = "1.0.0-alpha.1"
nb = "1" # todo: remove when `embedded-hal` updated
riscv = "0.6"

[lib]
name = "gd32vf103_hal"
test = false
bench = false
